--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
     <div class="container profile-container">
     <div class="intro">
         <div class="avatar">
-            <a href="/"><img src="/image/my_pic.jpg"></a>
+            <a href="https://sites.google.com/view/hjbyun"><img src="/image/my_pic.jpg"></a>
         </div>
         <div class="nickname">Hyung Joon Byun</div>
-        <div class="description"><p>Hello! Welcome to my website. Click on my picture to see my new website. <br>Also, navigate through the tabs to see the details.</p>
+        <div class="description"><p>Welcome! Click on my picture to see my new website. <br>Also, navigate through the tabs to see the details.</p>
 </div>
         <div class="links">
             
